[fix] remove strange blurred effect on alert text

--- a/web/registration/css/style.css
+++ b/web/registration/css/style.css
@@ -15,7 +15,6 @@ html, body {
     width: 100%;
     font-family: "Open Sans";
     font-size: 14px;
-    text-shadow: 0 0 3px #222;
     background-color: #000;
 }
 
